# Engineering-Standards

./: .gitattributes  .gitignore  .markdownlint.json  AGENTS.md  CHANGELOG.md  CODEOWNERS  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  governance.config.json  project-manifest.json
.github/: dependabot.yml  pull_request_template.md
agents/: AGENTS_Base.md  AGENTS_Bash.md  AGENTS_Database.md  AGENTS_DotNet.md  AGENTS_Infrastructure.md  AGENTS_Integration.md  AGENTS_PowerShell.md  AGENTS_Python.md  AGENTS_WebFrontend.md  AGENTS_WorkerService.md
docs/: ACTION_SECURITY.md  ADOPTION_GUIDE.md  BACKLOG_MANAGEMENT.md  BRANCH_PROTECTION.md  CODEX_SKILLS.md  CODEX_SKILL_VALIDATION.md  DOWNSTREAM_CANARY.md  DOWNSTREAM_COMPATIBILITY.md  DOWNSTREAM_CONFIGURATION.md  GOVERNANCE_ARCHITECTURE.md  GOVERNANCE_CONSOLIDATION_AUDIT.md  MAINTAINER_GUIDE.md  PR_BODY_GOVERNANCE.md  RELEASE_PROCESS.md  RELEASE_STATUS.md  (+4 more)
examples/python-project/: AGENTS.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  governance.config.json  project-manifest.json  pyproject.toml  requirements-ci.in
examples/python-project/.github/workflows/: governance.yml
examples/python-project/evidence/: local-completion-result.json  local-test-results.json  python-build.json  python-dependency-audit.json  python-formatting.json  python-project-sbom.cdx.json  python-ruff.json  python-tests.json  python-type-check.json
examples/python-project/src/governed_paths/: __init__.py  cli.py  paths.py
examples/python-project/tests/: test_paths.py
examples/python-project/tools/: Test-Example.ps1  validate.py
(+788 files in other folders)
